Update: Input box getting stuck. Not yet fixed.

--- a/app/popup/src/components/Notes/Notes.scss
+++ b/app/popup/src/components/Notes/Notes.scss
@@ -25,11 +25,12 @@
 
 .actionButtons {
   transition: 0.3s;
-  display: flex;
   align-items: center;
   opacity: 0;
+  display: none;
 }
 
 .item:hover .actionButtons {
   opacity: 1;
+  display: flex;
 }
